feat(core): Phase 1 - Implement Epoch-Based Reclamation, RW Locks, and Thread-Safe Python Views
- Add EpochManager/EpochGuard RAII for epoch-based reclamation (EBR)
- Atomic mmap lifecycle in MemoryFile: grow() retires old mapping via EBR
- Upgrade Atlas write_mutex_ to std::shared_mutex (concurrent reads, exclusive writes)
- EpochGuard exposed as Python context manager with keep_alive semantics
- SLBHit struct eliminates dangling pointer UAF in SLB cache hits
- safe_memory_view() context manager in Python client
- ThreadSanitizer clean (zero data races), AddressSanitizer clean (zero UAF)
- Benchmark verified: SLB hit 3.59µs, Atlas traversal 7-11µs at scale
- All 25 C++ tests, 8 Python tests passing

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -135,11 +135,14 @@ if(BUILD_TESTING)
         tests/test_math.cpp
         tests/test_storage.cpp
         tests/test_atlas.cpp
+        tests/test_epoch.cpp
+        tests/test_concurrency.cpp
     )
 
     target_link_libraries(aeon_tests PRIVATE 
         aeon_core 
         GTest::gtest_main
+        pthread
     )
 
     # Default to C++23 for tests, fallback to 20 for MSVC
