eat(kernel): implement sidecar blob arena for episodic trace, maintaining 512B alignment

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,10 @@ set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
 option(BUILD_TESTING "Build tests" ON)
 
+if(BUILD_TESTING)
+    enable_testing()
+endif()
+
 # Configure runpath for development convenience
 if(APPLE)
     set(CMAKE_MACOSX_RPATH ON)
