--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,7 @@ results/*.csv
 results/*.raw
 # keeping JSON results for reference, but ignore if they get too large
 # results/*.json
+
+# --- Node.js ---
+node_modules/
+*.node
